; ModuleID = '/home/carl/AnghaBench/linux/block/extr_blk-zoned.c_blk_alloc_zones.c'
source_filename = "/home/carl/AnghaBench/linux/block/extr_blk-zoned.c_blk_alloc_zones.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.blk_zone = type { i32 }

@BLK_ZONED_REPORT_MAX_ZONES = common dso_local global i32 0, align 4
@GFP_KERNEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.blk_zone* (i32*)* @blk_alloc_zones to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.blk_zone* @blk_alloc_zones(i32* %0) #0 {
  %2 = alloca %struct.blk_zone*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca %struct.blk_zone*, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @BLK_ZONED_REPORT_MAX_ZONES, align 4
  %9 = call i64 @min(i32 %7, i32 %8)
  store i64 %9, i64* %5, align 8
  %10 = load i64, i64* %5, align 8
  %11 = load i32, i32* @GFP_KERNEL, align 4
  %12 = call %struct.blk_zone* @kvcalloc(i64 %10, i32 4, i32 %11)
  store %struct.blk_zone* %12, %struct.blk_zone** %4, align 8
  %13 = load %struct.blk_zone*, %struct.blk_zone** %4, align 8
  %14 = icmp ne %struct.blk_zone* %13, null
  br i1 %14, label %17, label %15

15:                                               ; preds = %1
  %16 = load i32*, i32** %3, align 8
  store i32 0, i32* %16, align 4
  store %struct.blk_zone* null, %struct.blk_zone** %2, align 8
  br label %22

17:                                               ; preds = %1
  %18 = load i64, i64* %5, align 8
  %19 = trunc i64 %18 to i32
  %20 = load i32*, i32** %3, align 8
  store i32 %19, i32* %20, align 4
  %21 = load %struct.blk_zone*, %struct.blk_zone** %4, align 8
  store %struct.blk_zone* %21, %struct.blk_zone** %2, align 8
  br label %22

22:                                               ; preds = %17, %15
  %23 = load %struct.blk_zone*, %struct.blk_zone** %2, align 8
  ret %struct.blk_zone* %23
}

declare dso_local i64 @min(i32, i32) #1

declare dso_local %struct.blk_zone* @kvcalloc(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
